--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,7 @@
 DATABASE_URL=postgres://gitpod:postgres@localhost:5432/example
 FLASK_APP_KEY="any key works"
 FLASK_APP=src/app.py
-FLASK_DEBUG=1
-DEBUG=TRUE
+FLASK_ENV=development
 
 # Front-End Variables
 BASENAME=/
