--- a/package.json
+++ b/package.json
@@ -73,9 +73,11 @@
 		]
 	},
 	"dependencies": {
+		"@videosdk.live/react-sdk": "^0.1.74",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
+		"react-player": "^2.12.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
 	}
