--- a/package.json
+++ b/package.json
@@ -74,11 +74,14 @@
 	},
 	"dependencies": {
 		"@videosdk.live/react-sdk": "^0.1.74",
+		"axios": "^1.7.2",
+		"bootstrap": "^5.3.3",
 		"prop-types": "^15.6.1",
-		"react": "^16.8.4",
-		"react-dom": "^16.8.4",
+		"react": "^16.14.0",
+		"react-dom": "^16.14.0",
 		"react-player": "^2.12.0",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"reactstrap": "^9.2.2"
 	}
 }
